[gd_scene load_steps=11 format=3 uid="uid://gbi8vlb130hx"]

[ext_resource type="Script" path="res://game/main/bed.gd" id="1_8cygb"]
[ext_resource type="Texture2D" uid="uid://f31vab5n60h" path="res://assets/hunger.png" id="2_1hxa1"]
[ext_resource type="Texture2D" uid="uid://b04s5i7on0nst" path="res://assets/UI/Charakterwahl_leer.png" id="2_rguvq"]
[ext_resource type="Texture2D" uid="uid://dr2fvy0mk6714" path="res://assets/thirst.png" id="3_83kj8"]
[ext_resource type="Texture2D" uid="uid://bfkfjt27fm41j" path="res://assets/UI/meat.png" id="4_gri1q"]
[ext_resource type="Texture2D" uid="uid://bjey55w88fx7p" path="res://assets/UI/botschaft.png" id="6_w1twf"]
[ext_resource type="Texture2D" uid="uid://djhdwsauf6601" path="res://assets/UI/Sleep.png" id="7_e0rmg"]
[ext_resource type="Texture2D" uid="uid://b5n7w1pg0hhte" path="res://assets/UI/HP.png" id="8_oh2us"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qnddo"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fp64m"]
bg_color = Color(0.388235, 0.694118, 0.952941, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="Bed" type="Panel"]
custom_minimum_size = Vector2(300, 160)
offset_right = 300.0
offset_bottom = 160.0
script = ExtResource("1_8cygb")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_rguvq")
expand_mode = 1

[node name="PortraitPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -101.0
offset_top = 72.0
offset_right = -16.0
offset_bottom = 148.0
grow_horizontal = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_qnddo")

[node name="Portrait" type="TextureRect" parent="PortraitPanel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -33.5
offset_top = -31.0
offset_right = 33.5
offset_bottom = 31.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1

[node name="NameLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 16.0
offset_top = 74.0
offset_right = 97.0
offset_bottom = 115.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
text = "Name"

[node name="HungerIcon" type="TextureRect" parent="."]
visible = false
layout_mode = 0
offset_left = 13.0
offset_top = 25.0
offset_right = 33.0
offset_bottom = 45.0
texture = ExtResource("2_1hxa1")

[node name="HungerIcon2" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 9.0
offset_top = 19.0
offset_right = 41.0
offset_bottom = 51.0
texture = ExtResource("4_gri1q")
expand_mode = 4

[node name="HungerLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 44.0
offset_top = 30.0
offset_right = 73.0
offset_bottom = 60.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "50"

[node name="ThirstIcon" type="TextureRect" parent="."]
visible = false
layout_mode = 0
offset_left = 88.0
offset_top = 58.0
offset_right = 108.0
offset_bottom = 78.0
texture = ExtResource("3_83kj8")

[node name="ThirstIcon2" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 80.0
offset_top = 19.0
offset_right = 112.0
offset_bottom = 51.0
texture = ExtResource("6_w1twf")
expand_mode = 1

[node name="ThirstLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 110.0
offset_top = 29.0
offset_right = 170.0
offset_bottom = 52.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "40
"

[node name="SleepIcon" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 141.0
offset_top = 20.0
offset_right = 173.0
offset_bottom = 52.0
texture = ExtResource("7_e0rmg")
expand_mode = 1

[node name="SleepLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 176.0
offset_top = 29.0
offset_right = 236.0
offset_bottom = 52.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "40
"

[node name="HappynessIcon" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 210.0
offset_top = 27.0
offset_right = 230.0
offset_bottom = 47.0
texture = ExtResource("3_83kj8")

[node name="HappynessLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 243.0
offset_top = 28.0
offset_right = 303.0
offset_bottom = 51.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "40
"

[node name="HPIcon" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 162.0
offset_top = 76.0
offset_right = 198.0
offset_bottom = 112.0
texture = ExtResource("8_oh2us")
expand_mode = 1

[node name="HPLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 124.0
offset_top = 77.0
offset_right = 184.0
offset_bottom = 118.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 28
text = "40
"

[node name="ActionPanel" type="Panel" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 0
offset_left = 13.0
offset_top = 112.0
offset_right = 194.0
offset_bottom = 148.0
theme_override_styles/panel = SubResource("StyleBoxFlat_fp64m")

[node name="ActionLabel" type="Label" parent="ActionPanel"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 185.0
offset_bottom = 31.0
text = "Current Action: Action-Name"

[node name="ActionProgress" type="ProgressBar" parent="ActionPanel"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 7.0
offset_top = 4.0
offset_right = 175.0
offset_bottom = 31.0
max_value = 3.0
step = 1.0
value = 1.0
show_percentage = false

[node name="ActionProgress2" type="ProgressBar" parent="."]
layout_mode = 0
offset_left = 20.0
offset_top = 116.0
offset_right = 188.0
offset_bottom = 143.0
max_value = 3.0
step = 1.0
value = 1.0
show_percentage = false

[node name="Platzhalter Aktionswahl" type="Label" parent="ActionProgress2"]
layout_mode = 0
offset_left = 1.0
offset_top = 4.0
offset_right = 178.0
offset_bottom = 27.0
text = "Platzhalter Aktionswahl"

[node name="ActionPanel2" type="Panel" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 0
offset_left = 13.0
offset_top = 112.0
offset_right = 194.0
offset_bottom = 148.0
theme_override_styles/panel = SubResource("StyleBoxFlat_fp64m")

[node name="ActionLabel" type="Label" parent="ActionPanel2"]
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 185.0
offset_bottom = 31.0
text = "Current Action: Action-Name"

[node name="ActionProgress" type="ProgressBar" parent="ActionPanel2"]
layout_mode = 0
offset_left = 7.0
offset_top = 4.0
offset_right = 175.0
offset_bottom = 31.0
max_value = 3.0
step = 1.0
value = 1.0
show_percentage = false

[node name="EmptyPanel" type="Panel" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="EmptyPanel"]
modulate = Color(0.384314, 0.352941, 0.0941176, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_rguvq")
expand_mode = 1

[node name="Label" type="Label" parent="EmptyPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -25.0
offset_top = -11.5
offset_right = 25.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "Free Bed"
horizontal_alignment = 1

[node name="BuildPanel" type="Panel" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="BuildPanel"]
modulate = Color(0.65098, 0.00784314, 0.231373, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_rguvq")
expand_mode = 1

[node name="Label" type="Label" parent="BuildPanel"]
layout_mode = 0
offset_left = 59.0
offset_top = 36.0
offset_right = 230.0
offset_bottom = 77.0
theme_override_font_sizes/font_size = 32
text = "Available space"

[node name="BuildButton" type="Button" parent="BuildPanel"]
layout_mode = 0
offset_left = 14.0
offset_top = 83.0
offset_right = 286.0
offset_bottom = 132.0
text = "Build Bed (100 wood)"

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="pressed" from="BuildPanel/BuildButton" to="." method="_on_build_button_pressed"]
